--- a/src/helpdesk/Abierto.form
+++ b/src/helpdesk/Abierto.form
@@ -81,12 +81,13 @@
               <Color blue="94" green="bf" red="cc" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/Sistema_Locked_35452.png"/>
+              <Image iconType="3" name="/imagenes/Cerrados-Boton1.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cerrados"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
+            <Property name="borderPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Cursor de Mano"/>
             </Property>
@@ -96,7 +97,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="59" y="515" width="100" height="40"/>
+              <AbsoluteConstraints x="29" y="515" width="130" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
